# vector_lake

./: .flake8  .gitignore  Readme.md  pyproject.toml
.github/workflows/: auto-review.yml  release.yml
examples/: env.py  lc.py  partition.py  s3_lake.py
tests/: conftest.py  test_properties.py  test_unit.py
vector_lake/: __init__.py  __main__.py
vector_lake/core/: __init__.py  hnsw.py  index.py
vector_lake/langchain/: __init__.py
