[tool.poetry]
name = "vector_lake"
version = "0.0.4"
description = "S3 vector database for bigdata"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = [
    "Alexander Miasoiedov <msoedov@gmail.com>",
]
repository = "https://github.com/msoedov/vector_lake"
license = "MIT"
readme = "Readme.md"
keywords = ["vector", "database", "bigdata"]
packages = [{ include = "vector_lake", from = "." }]


[tool.poetry.scripts]
vector_lake = "vector_lake.__main__:entrypoint"

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"
loguru = "^0.7.0"
numpy = "^1.24.3"
scikit-learn = "1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
httpx = "^0.23.3"
pytest = "^7.2.2"
types-requests = "^2.28.11"
pre-commit = "^3.2.2"
hypothesis = "6.75.9"
pytest-benchmark = "4.0.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
