[project]
name = "vector_lake"
version = "0.0.5"
description = "S3 vector database for bigdata"
readme = "Readme.md"
requires-python = ">=3.9,<4.0"
license = { text = "MIT" }
keywords = ["vector", "database", "bigdata"]
authors = [{ name = "Alexander Miasoiedov", email = "msoedov@gmail.com" }]
maintainers = [{ name = "Alexander Miasoiedov", email = "msoedov@gmail.com" }]
dependencies = [
    "fire>=0.5.0,<0.6.0",
    "loguru>=0.7.0,<0.8.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.2.2,<3.0.0",
    "pyarrow>=16.1.0,<17.0.0",
    "pydantic>=1.10.15,<2.0.0",
    "pytz>=2024.1,<2025.0",
    "scikit-learn>=1.4.2,<2.0.0",
]
urls = { "Repository" = "https://github.com/msoedov/vector_lake" }

[project.optional-dependencies]
s3 = ["boto3>=1.34.115,<2.0.0"]
dev = [
    "black>=24.4.2,<25.0.0",
    "mypy>=1.10.0,<2.0.0",
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.2.0,<9.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "pre-commit>=3.7.1,<4.0.0",
    "hypothesis>=6.99.13,<7.0.0",
    "pytest-benchmark==4.0.0",
]

[project.scripts]
vector_lake = "vector_lake.__main__:entrypoint"


[tool.poetry]
name = "vector_lake"
version = "0.0.5"
description = "S3 vector database for bigdata"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = ["Alexander Miasoiedov <msoedov@gmail.com>"]
repository = "https://github.com/msoedov/vector_lake"
license = "MIT"
readme = "Readme.md"
keywords = ["vector", "database", "bigdata"]
packages = [{ include = "vector_lake", from = "." }]


[tool.poetry.scripts]
vector_lake = "vector_lake.__main__:entrypoint"

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"
loguru = "^0.7.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
pydantic = "^1.10.15"
pytz = "^2024.1"
scikit-learn = "^1.4.2"
boto3 = { version = "^1.34.115", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
httpx = "^0.27.0"
pytest = "^8.2.0"
types-requests = "^2.31.0"
pre-commit = "^3.7.1"
hypothesis = "^6.99.13"
pytest-benchmark = "4.0.0"

[tool.poetry.extras]
s3 = ["boto3"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
